--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-            <ul style="list-style-type: none;" role="list">
+            <ul style="list-style-type: none;" role="navigation">
                 <li role="listitem" style="float: left; margin-right: 10px;"><a href="#attraction">Attraction |</a></li>
                 <!-- <li>Photo</li> -->
                 <li role="listitem" style="float: left; margin-right: 10px;"><a href="#stats">Statistics |</a></li>
