--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav>
-            <ul style="list-style-type: none;" role="navigation">
+	<nav role="navigation">
+            <ul style="list-style-type: none;" role="list">
                 <li role="listitem" style="float: left; margin-right: 10px;"><a href="#attraction">Attraction |</a></li>
                 <!-- <li>Photo</li> -->
                 <li role="listitem" style="float: left; margin-right: 10px;"><a href="#stats">Statistics |</a></li>
